# plinor

./: README.md  pyproject.toml
benchmarks/: notes.md
benchmarks/db_insert/: buffered_bulk_inserts.py  buffered_bulk_inserts_ts_int.py  many_single_inserts.py
benchmarks/framework/: fastApi_noValidation.py  fastApi_pydantic.py  starlette_msgspec.py  starlette_noValidation.py
src/: connection.py  gunicorn.conf.py  main.py
